# examen-dvc

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: .gitignore
metrics/: .gitignore
models/data/: .gitignore
notebooks/: data_exploration.ipynb
src/data/: data_split.py  feature_engineering.py  normalize.py  split_data.py  validate_data.py
src/models/: evaluate.py  grid_search.py  training.py
task/: Plan.md  Task.md
